# meltano

./: README.md  databricks.py  main.py  meltano.yml  pyproject.toml  requirements.txt  tap-woocommerce.sh  tox.ini
tap_woocommerce/: client.py  config.json  streams.py  tap.py
tap_woocommerce/tests/: __init__.py  test_core.py
